# fakultet-big-data

./: .gitignore  .pre-commit-config.yaml  README.md  main.ipynb  pyproject.toml
src/: __init__.py  data_loader.py  models.py  visualization.py
