[tool.poetry]
name = "energy-consumption-analysis"
version = "0.1.0"
description = "Data science analysis of household electrical energy consumption"
authors = [{ name = "Jovan Popovic", email = "popovicjovan23@gmail.com" }]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.2.1"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
statsmodels = "^0.14.4"
scikit-learn = "^1.6.1"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
